# r200_uhf

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cog.toml
.github/workflows/: rust.yml
examples/: async_std_pc_serial.rs  std_pc_serial.rs
examples/lib/: common.rs
src/: connector.rs  frame.rs  lib.rs  packet.rs  rfid.rs
src/connector/: async_impl.rs  mod.rs  sync.rs
