[package]
name = "r200_uhf"
version = "0.4.0"
edition = "2024"
description = "Implementation of serial protocol for reading R200 UHF chip"
license = "MIT"
repository = "https://github.com/oniram88/r200_uhf"


[dependencies]
log = "0.4"

[dev-dependencies]
serialport = "4.8"
env_logger = "0.11"
# altre dipendenze usate solo in test/esempi
