[package]
name = "r200_uhf"
version = "0.4.0"
edition = "2024"
description = "Implementation of serial protocol for reading R200 UHF chip"
license = "MIT"
repository = "https://github.com/oniram88/r200_uhf"


[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"], optional = true }
async-trait = { version = "0.1", optional = true }
tokio = { version = "1", features = ["io-util", "time"], optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
serialport = "4.8"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }

[features]
default = ["sync"]
# Abilita la serializzazione/deserializzazione Serde delle strutture quando richiesto
serde = ["dep:serde"]
sync = []
async = ["dep:async-trait", "dep:tokio", "dep:futures"]
